<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="336dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_rounded"
    android:padding="24dp">

    <TextView
        android:id="@+id/text_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:gravity="center"
        android:textColor="@color/input_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/offline_title" />

    <TextView
        android:id="@+id/text_dialog_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:textColor="@color/text_secondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_dialog_title"
        tools:text="@string/offline_message" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_dialog_message">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/text_secondary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/medium"
            android:padding="8dp"
            android:textColor="@color/orange"
            android:textSize="18sp"
            tools:text="@string/connect_wifi" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
