<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:paddingHorizontal="12dp"
    android:paddingVertical="0dp">

    <!-- Guidelines for 4 equal columns -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <!-- ROW 1 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ac"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_ac"
        android:textColor="@color/red_dark"
        app:backgroundTint="@color/red_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_v1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_plus_minus"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:foregroundGravity="center"
        app:backgroundTint="@color/operation_button_color"
        app:icon="@drawable/mynaui_percentage"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="34dp"
        app:iconTint="@color/input_text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gl_v1"
        app:layout_constraintEnd_toStartOf="@+id/gl_v2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_percent"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:foregroundGravity="center"
        app:backgroundTint="@color/operation_button_color"
        app:icon="@drawable/ic_percentage"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="34dp"
        app:iconTint="@color/input_text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gl_v2"
        app:layout_constraintEnd_toStartOf="@+id/gl_v3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_divide"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:foregroundGravity="center"
        app:backgroundTint="@color/operation_button_color"
        app:icon="@drawable/ic_devide"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="34dp"
        app:iconTint="@color/input_text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gl_v3"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ROW 2 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_7"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_7"
        app:layout_constraintTop_toBottomOf="@+id/btn_ac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_v1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_8"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_8"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus_minus"
        app:layout_constraintStart_toEndOf="@+id/gl_v1"
        app:layout_constraintEnd_toStartOf="@+id/gl_v2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_9"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_9"
        app:layout_constraintTop_toBottomOf="@+id/btn_percent"
        app:layout_constraintStart_toEndOf="@+id/gl_v2"
        app:layout_constraintEnd_toStartOf="@+id/gl_v3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_multiply"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:foregroundGravity="center"
        app:backgroundTint="@color/operation_button_color"
        app:icon="@drawable/ic_multiply"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="34dp"
        app:iconTint="@color/input_text_color"
        app:layout_constraintTop_toBottomOf="@+id/btn_divide"
        app:layout_constraintStart_toEndOf="@+id/gl_v3"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ROW 3 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_4"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_4"
        app:layout_constraintTop_toBottomOf="@+id/btn_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_v1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_5"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_5"
        app:layout_constraintTop_toBottomOf="@+id/btn_8"
        app:layout_constraintStart_toEndOf="@+id/gl_v1"
        app:layout_constraintEnd_toStartOf="@+id/gl_v2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_6"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_6"
        app:layout_constraintTop_toBottomOf="@+id/btn_9"
        app:layout_constraintStart_toEndOf="@+id/gl_v2"
        app:layout_constraintEnd_toStartOf="@+id/gl_v3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_minus"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:foregroundGravity="center"
        app:backgroundTint="@color/operation_button_color"
        app:icon="@drawable/ic_basline_minus"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="34dp"
        app:iconTint="@color/input_text_color"
        app:layout_constraintTop_toBottomOf="@+id/btn_multiply"
        app:layout_constraintStart_toEndOf="@+id/gl_v3"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ROW 4 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_1"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_v1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_2"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_5"
        app:layout_constraintStart_toEndOf="@+id/gl_v1"
        app:layout_constraintEnd_toStartOf="@+id/gl_v2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_3"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_3"
        app:layout_constraintTop_toBottomOf="@+id/btn_6"
        app:layout_constraintStart_toEndOf="@+id/gl_v2"
        app:layout_constraintEnd_toStartOf="@+id/gl_v3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_plus"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:foregroundGravity="center"
        app:backgroundTint="@color/operation_button_color"
        app:icon="@drawable/ic_plus"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="34dp"
        app:iconTint="@color/input_text_color"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus"
        app:layout_constraintStart_toEndOf="@+id/gl_v3"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ROW 5 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_00"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_00"
        app:layout_constraintTop_toBottomOf="@+id/btn_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_v1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_0"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_0"
        app:layout_constraintTop_toBottomOf="@+id/btn_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gl_v1"
        app:layout_constraintEnd_toStartOf="@+id/gl_v2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dot"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_dot"
        app:layout_constraintTop_toBottomOf="@+id/btn_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gl_v2"
        app:layout_constraintEnd_toStartOf="@+id/gl_v3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/id_equals"
        style="@style/MainStandardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:foregroundGravity="center"
        app:backgroundTint="@color/orange"
        app:icon="@drawable/ic_equal_to"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="34dp"
        app:iconTint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gl_v3"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>